Fix upload-artifacts and its installation
Fix the content of DeployArtifactFILEs in the generated
environment file. The absolute path of the artifact is
now properly formatted, and the script correctly handles
multiple files passed in parameters.

Fix the installation of the script in setup.cfg.

Tested manually with multiple artifacts, and via
upload-puppet-modules (single artifact).

Change-Id: I946df38ada9b2197076963e6140653f85d7c2cbc
Closes-Bug: #1933336

--- a/setup.cfg
+++ b/setup.cfg
@@ -34,6 +34,7 @@ scripts =
     scripts/tripleo-config-download
     scripts/upload-puppet-modules
     scripts/upload-swift-artifacts
+    scripts/upload-artifacts
 
 data_files =
     lib/heat/undercloud_heat_plugins = undercloud_heat_plugins/*
