Setting language for the python3.6 tox environment
By ensuring the locale is set to US utf-8 we can avoid
encoding errors.

Change-Id: Idc620239c6d43de69f707cf210ce8e5059d6cf01
Closes-Bug: #1940313

--- a/tox.ini
+++ b/tox.ini
@@ -21,6 +21,7 @@ setenv =
     # pip: Avoid 2020-01-01 warnings: https://github.com/pypa/pip/issues/6207
     PYTHONWARNINGS=ignore:DEPRECATION::pip._internal.cli.base_command,ignore::UserWarning
     PIP_DISABLE_PIP_VERSION_CHECK=1
+    LC_ALL=en_US.UTF-8
 passenv =
     ANSIBLE_*
     CURL_CA_BUNDLE
