Delete overcloud-hardened-full image definitions
The rt-kernel image has been converted to an
overcloud-hardened-uefi-full version. All others are deleted as
they're already replaced by the overcloud-hardened-uefi-full image.

Blueprint: whole-disk-default
Change-Id: I5dfcf4dfa66be57ee3a6f94e1a094dcd527ffac5

--- a/image-yaml/overcloud-hardened-images-uefi-python3-rt-kernel.yaml
+++ b/image-yaml/overcloud-hardened-images-uefi-python3-rt-kernel.yaml
@@ -1,6 +1,6 @@
 disk_images:
   -
-    imagename: overcloud-hardened-full-rt-kernel
+    imagename: overcloud-hardened-uefi-full-rt-kernel
     type: qcow2
     elements:
       - openvswitch
@@ -21,7 +21,8 @@ disk_images:
       - remove-machine-id
       - remove-resolvconf
       - modprobe
-      - overcloud-partition
+      - overcloud-partition-uefi
+      - overcloud-secure
       - openssh
       - disable-nouveau
     packages:
@@ -37,7 +38,8 @@ disk_images:
       - "--min-tmpfs=7"
     environment:
       DIB_PYTHON_VERSION: '3'
-      DIB_MODPROBE_BLACKLIST: 'usb-storage cramfs freevxfs jffs2 hfs hfsplus squashfs udf vfat bluetooth'
+      DIB_MODPROBE_BLACKLIST: 'usb-storage cramfs freevxfs jffs2 hfs hfsplus squashfs udf bluetooth'
       DIB_BOOTLOADER_DEFAULT_CMDLINE: 'nofb nomodeset vga=normal console=tty0 console=ttyS0,115200 audit=1 nousb'
-      DIB_IMAGE_SIZE: '40'
+      DIB_IMAGE_SIZE: '6'
       COMPRESS_IMAGE: '1'
+      DIB_BLOCK_DEVICE: 'efi'
