Add scripts tripleo-mount-image, tripleo-unmount-image
Now that the whole-disk image is being deployed, mounting an image
using tools like kpartx or qemu-nbd is much more involved, requiring
knowledge of the image LVM volumes and their intended mount points.

The scripts tripleo-mount-image and tripleo-unmount-image will mount
the contents of an overcloud image file using qemu-nbd, making it available
for chroot, or other read/write image operations. The scripts handle
partition images (overcloud-full.qcow2) as well as the whole-disk image
(overcloud-hardened-uefi-full.qcow2) with its multiple LVM volume mount
points.

qemu-nbd was chosen over kpartx as downstream documentation[1] has
standardized on this tool for mount based image modifications.

tripleo-unmount-image is a symlink to tripleo-mount-image and behaves
differently based on the script name.

Blueprint: whole-disk-default
[1] https://access.redhat.com/documentation/en-us/red_hat_openstack_platform/16.1/html/bare_metal_provisioning/booting-from-cinder-volumes

Change-Id: I3267b4ae5200eeed333a9518865260d23315f52c

--- a/setup.cfg
+++ b/setup.cfg
@@ -32,6 +32,8 @@ scripts =
     scripts/pull-puppet-modules
     scripts/tripleo-build-images
     scripts/tripleo-config-download
+    scripts/tripleo-mount-image
+    scripts/tripleo-unmount-image
     scripts/upload-puppet-modules
     scripts/upload-swift-artifacts
 
