[Train-only] Upload validation container in swift
The upload container action is missing for being to run the
validations properly.
This patch is related to the BZ:
https://bugzilla.redhat.com/show_bug.cgi?id=1974353

Change-Id: I5cc0379b02aafdce7a6bc2673bd192ece914969f

--- a/workbooks/deployment.yaml
+++ b/workbooks/deployment.yaml
@@ -150,8 +150,13 @@ workflows:
           container: <% $.container %>
           queue_name: <% $.queue_name %>
         on-complete:
-          - run_validations: <% $.run_validations %>
+          - upload_validations: <% $.run_validations %>
           - container_image_prepare_params: <% not $.run_validations %>
+
+      upload_validations:
+        action: tripleo.validations.upload
+        on-complete:
+          - run_validations: <% $.run_validations %>
 
       run_validations:
         workflow: tripleo.validations.v1.run_groups
