Add a retry to the instropection waiting workbook
The workbook wait_for_introspection_to_finish needs a retry and a delay
to avoid issues in some deployments

related bug https://bugzilla.redhat.com/show_bug.cgi?id=1999539

Change-Id: I2a23f33868ad71f6385403dbcb7353d1158d9e5a
(cherry picked from commit b02ad2618639ef39bd03c58d845ac8091d9bb90a)

--- a/workbooks/baremetal.yaml
+++ b/workbooks/baremetal.yaml
@@ -483,6 +483,9 @@ workflows:
           # in seconds correct.
           max_retries: <% $.timeout / 10 %>
           retry_interval: 10
+        retry:
+          delay: 10
+          count: 10
         publish:
           introspected_node: <% task().result.values().first() %>
           status: <% bool(task().result.values().first().error) and "FAILED" or "SUCCESS" %>
