Switch to mariadb:10.5 module
In EL9, we are consuming mariadb:10.5, It adds the same for
EL8 also.

It also copies the required security_reset[1] file
needed for mariadb:10.5

[1]. https://review.opendev.org/c/openstack/tripleo-common/+/807577

Signed-off-by: Chandan Kumar (raukadah) <chkumar@redhat.com>
Change-Id: I26174f6a450885fd65f8b1af5622d7d68c0aaf40

--- a/container-images/tcib/base/base.yaml
+++ b/container-images/tcib/base/base.yaml
@@ -13,7 +13,11 @@ tcib_actions:
     crudini --set /etc/dnf/dnf.conf main plugins 1 &&
     crudini --set /etc/dnf/dnf.conf main skip_missing_names_on_install False &&
     crudini --set /etc/dnf/dnf.conf main tsflags nodocs
-- run: if [ '{{ tcib_distro }}' == 'rhel' ]; then {% for item in tcib_packages.modules %}{% set key, value = (item.items() | list).0 %}dnf module -y {{ key }} {{ value }}; {% endfor %}fi
+- run: >-
+    {% for item in tcib_packages.modules %}
+    {% set key, value = (item.items() | list).0 %}
+    dnf module -y {{ key }} {{ value }};
+    {% endfor %}
 - run: dnf install -y openstack-tripleo-common-containers
 - run: cp /usr/share/openstack-tripleo-common-containers/container-images/kolla/base/uid_gid_manage.sh /usr/local/bin/uid_gid_manage
 - run: chmod 755 /usr/local/bin/uid_gid_manage
@@ -66,7 +70,7 @@ tcib_packages:
   - disable: container-tools:rhel8
   - disable: virt:rhel
   - enable: container-tools:{{ tcib_rhel_modules['container-tools'] | default('3.0') }}
-  - enable: mariadb:{{ tcib_rhel_modules['mariadb'] | default('10.3') }}
+  - enable: mariadb:{{ tcib_rhel_modules['mariadb'] | default('10.5') }}
   - enable: virt:{{ tcib_rhel_modules['virt'] | default('av') }}
   - enable: redis:{{ tcib_rhel_modules['redis'] | default('5') }}
 tcib_stopsignal: SIGTERM
