--- a/container-images/tcib/base/os/nova-base/nova-compute/nova-compute.yaml
+++ b/container-images/tcib/base/os/nova-base/nova-compute/nova-compute.yaml
@@ -10,7 +10,7 @@ tcib_packages:
   - ceph-common
   - device-mapper-multipath
   - e2fsprogs
-  - genisoimage
+  - xorriso
   - iscsi-initiator-utils
   - ndctl
   - nfs-utils
