--- a/container-images/tcib/base/os/ironic-base/ironic-conductor/ironic-conductor.yaml
+++ b/container-images/tcib/base/os/ironic-base/ironic-conductor/ironic-conductor.yaml
@@ -4,7 +4,7 @@ tcib_actions:
 - run: ln -s /usr/share/openstack-tripleo-common/healthcheck/ironic-conductor /openstack/healthcheck &&  chmod a+rx /openstack/healthcheck
 tcib_packages:
   common:
-  - genisoimage
+  - xorriso
   - dosfstools
   - e2fsprogs
   - gdisk
