Align swtpm packages for nova-libvirt/compute
Both containers require swtpm/tools and trousers packages installed.
Also add tss user/group.

Closes-bug: #1901530

Change-Id: Id5b83ad4e5a4e223f43adac95d0079d5cdcc2749
Signed-off-by: Bogdan Dobrelya <bdobreli@redhat.com>
(cherry picked from commit 8cbdb71d7eac2a8dc13c65c2d42fa24fac31de4a)

--- a/container-images/tcib/base/os/nova-base/nova-compute/nova-compute.yaml
+++ b/container-images/tcib/base/os/nova-base/nova-compute/nova-compute.yaml
@@ -24,7 +24,10 @@ tcib_packages:
   - python3-oslo-vmware
   - python3-rtslib
   - sysfsutils
+  - swtpm
+  - swtpm-tools
   - targetcli
+  - trousers
   - xfsprogs
   x86_64:
   - daxio
