Add ipa client to tripleoclient container
Change-Id: Ic3a52b277f96dfd30c263b60d8a25499b9cae68d
(cherry picked from commit 78f5d7b6c841ad90eda769d48bdcfaa420d824d9)
(cherry picked from commit 8adc5ff1bb2cd256c83ae934325afe162eaca95f)
(cherry picked from commit 6e398b9df44888b064c4bd91c933e0e76764492e)

--- a/container-images/tcib/base/tripleoclient/tripleoclient.yaml
+++ b/container-images/tcib/base/tripleoclient/tripleoclient.yaml
@@ -19,5 +19,6 @@ tcib_packages:
   - xfsprogs
   - python3-osc-placement
   - bash-completion
+  - ipa-client
   - ceph-ansible
 tcib_user: cloud-admin
