--- a/image-yaml/overcloud-hardened-images-uefi-centos8.yaml
+++ b/image-yaml/overcloud-hardened-images-uefi-centos8.yaml
@@ -7,6 +7,8 @@ disk_images:
     elements:
       - selinux-permissive
       - interface-names
+    packages:
+      - kernel-modules-extra
   -
     imagename: ironic-python-agent
     type: qcow2
