[EL9] Switch to mariadb:10.5 module
https://review.opendev.org/c/openstack/tripleo-common/+/808496
reverted the switch to mariab:10.5 for EL 8 and 9 as it breaks
the IPA job.

mariadb:10.5 works for el9 only so making it conditional and
proceeds ahead.

Copying the changelog from
https://review.opendev.org/c/openstack/tripleo-common/+/813642 :
- Now we've landed the patches dealing with the 10.5 user dns/naming thing
 (https://review.opendev.org/c/openstack/tripleo-heat-templates/+/808745 and w-cherry pick)
- And now we have mariadb-10.5.12-3 which readds the wsrep_sst_rsync_tunnel back:
* Mon Oct 11 12:00:00 AM 2021 Michal Schorm <mschorm@redhat.com> - 3:10.5.12-3
- Add wsrep_sst_rsync_tunnel script

Signed-off-by: Chandan Kumar (raukadah) <chkumar@redhat.com>
Change-Id: I5b474ad02da3eb52c0f2e2b5e51fc4915187be67

--- a/container-images/tcib/base/base.yaml
+++ b/container-images/tcib/base/base.yaml
@@ -75,7 +75,7 @@ tcib_packages:
   - disable: container-tools:rhel8
   - disable: virt:rhel
   - enable: container-tools:{{ tcib_rhel_modules['container-tools'] | default('latest' if tcib_release is version('9', '==') else '3.0') }}
-  - enable: mariadb:{{ tcib_rhel_modules['mariadb'] | default('10.3') }}
+  - enable: mariadb:{{ tcib_rhel_modules['mariadb'] | default('10.5' if tcib_release is version('9', '==') else '10.3') }}
   - enable: virt:{{ tcib_rhel_modules['virt'] | default('av') }}
   - enable: redis:{{ tcib_rhel_modules['redis'] | default('5') }}
 tcib_stopsignal: SIGTERM
