Fix permissions for deployments
If you run the deployment without a global become, the permissions on
the deployment output folder is root which causes it to fail.

2021-10-25 17:21:12.735097 | 5254006a-0342-081e-9547-00000000043e |
FATAL | Template deployment file for ControllerSwapDeployment |
overcloud-controller-0 | error={"changed": false, "checksum":
"4b4902390aa26ccce0f06960450eeb7ba0b79735", "msg": "Destination
/var/lib/heat-config/tripleo-config-download not writable"}

Change-Id: I987e81fee3d25189dc001edd70bb57d5c3dd4310
(cherry picked from commit f9377d062bb4c9fe11c1e9698dcae614540dfb81)

--- a/tripleo_common/templates/deployments.yaml
+++ b/tripleo_common/templates/deployments.yaml
@@ -16,24 +16,28 @@
   block:
 
     - name: Create hiera check-mode directory
+      become: true
       file:
         path: /etc/puppet/check-mode/hieradata
         state: directory
       check_mode: no
 
     - name: Create deployed check-mode directory
+      become: true
       file:
         path: /var/lib/heat-config/check-mode
         state: directory
       check_mode: no
 
     - name: Create tripleo-config-download check-mode directory
+      become: true
       file:
         path: /var/lib/heat-config/tripleo-config-download/check-mode
         state: directory
       check_mode: no
 
     - name: "Template deployment file for {{ item }}"
+      become: true
       template:
         src: "{{ tripleo_role_name ~ '/' ~ ansible_facts['hostname'] | lower ~ '/' ~ item }}"
         dest: "/var/lib/heat-config/check-mode/tripleo-config-download/{{ item ~ '-' ~ deployment_uuid }}.rendered"
@@ -51,6 +55,7 @@
       register: deployment_content
 
     - name: "Remote copy deployment file for {{ item }}"
+      become: true
       copy:
         content: "[ {{ deployment_content.content | b64decode | from_yaml | json_query(item_only) }} ]"
         dest: "/var/lib/heat-config/check-mode/tripleo-config-download/{{ item ~ '-' ~ deployment_uuid }}"
@@ -121,6 +126,7 @@
     - ansible_check_mode|bool
 
 - name: "Template deployment file for {{ item }}"
+  become: true
   template:
     src: "{{ tripleo_role_name ~ '/' ~ ansible_facts['hostname'] | lower ~ '/' ~ item }}"
     dest: "/var/lib/heat-config/tripleo-config-download/{{ item ~ '-' ~ deployment_uuid }}.rendered"
@@ -140,6 +146,7 @@
     - not ansible_check_mode|bool
 
 - name: "Remote copy deployment file for {{ item }}"
+  become: true
   copy:
     content: "[ {{ deployment_content.content | b64decode | from_yaml | json_query(item_only) }} ]"
     dest: "/var/lib/heat-config/tripleo-config-download/{{ item ~ '-' ~ deployment_uuid }}"
