--- a/container-images/tcib/base/base.yaml
+++ b/container-images/tcib/base/base.yaml
@@ -69,4 +69,5 @@ tcib_packages:
   - enable: mariadb:{{ tcib_rhel_modules['mariadb'] | default('10.3') }}
   - enable: virt:{{ tcib_rhel_modules['virt'] | default('8.3') }}
   - enable: redis:{{ tcib_rhel_modules['redis'] | default('5') }}
+  - enable: nodejs:{{ tcib_rhel_modules['nodejs'] | default('14') }}
 tcib_stopsignal: SIGTERM
