Disable ubi repos during container builds
When ubi is used to build the base image,
there is a ubi.repo file added. The rpms from
these repos can clash which rpms from
repos put down from CI.

This patch disables the ubi repos if
they exist to minimize clashes.

Change-Id: I6b05702b4ed17b99eb8246d6740dd74c0ebef758
Related-Bug: BZ2022749

--- a/container-images/tcib/base/base.yaml
+++ b/container-images/tcib/base/base.yaml
@@ -1,4 +1,5 @@
 tcib_actions:
+- run: if [ -f "/etc/yum.repos.d/ubi.repo" ]; then dnf config-manager --set-disabled "ubi*" && dnf clean all && rm -rf /var/cache/dnf; fi
 - run: >-
     dnf install -y crudini &&
     crudini --del /etc/dnf/dnf.conf main override_install_langs &&
