Tidy up config image declarations
The API needed it's own config container image and the rest were "pick
one there all the same". This patch sets a specific config image for the
API and the rest of the services according to what is really required.

Change-Id: I7867efe52609eff31fca692b5298a9eede35c239

--- a/container-images/tripleo_containers.yaml
+++ b/container-images/tripleo_containers.yaml
@@ -35,6 +35,8 @@ container_images:
   image_source: tripleo
 - imagename: quay.io/tripleomaster/openstack-designate-api:current-tripleo
   image_source: tripleo
+- imagename: quay.io/tripleomaster/openstack-designate-base:current-tripleo
+  image_source: tripleo
 - imagename: quay.io/tripleomaster/openstack-designate-backend-bind9:current-tripleo
   image_source: tripleo
 - imagename: quay.io/tripleomaster/openstack-designate-central:current-tripleo
