Install curl for EL8 only
In CentOS stream9 and UBI 9 image, curl-minimal is already
installed in the image.

The curl installation conflicts with curl-minimal package.
So we are restricting curl installation to cs8 only.

Closes-Bug: #1953156

Signed-off-by: Chandan Kumar (raukadah) <chkumar@redhat.com>
Change-Id: I8da32dcfcba243b7cecfee0f1a6e423ee1dbd8fb

--- a/container-images/tcib/base/base.yaml
+++ b/container-images/tcib/base/base.yaml
@@ -37,7 +37,8 @@ tcib_actions:
 - run: chmod 440 /etc/sudoers
 - run: >-
     if [ '{{ tcib_release }}' == '8' ];then
-    sed -ri '/-session(\s+)optional(\s+)pam_systemd.so/d' /etc/pam.d/system-auth; fi
+    sed -ri '/-session(\s+)optional(\s+)pam_systemd.so/d' /etc/pam.d/system-auth &&
+    dnf install -y curl; fi
 - run: sed -ri '/^(passwd:|group:)/ s/systemd//g' /etc/nsswitch.conf
 - run: dnf install -y {{ tcib_packages['common'] | join(' ') }}
 - run: >-
@@ -64,7 +65,6 @@ tcib_labels:
 tcib_packages:
   common:
   - ca-certificates
-  - curl
   - dumb-init
   - glibc-langpack-en
   - iscsi-initiator-utils
