--- a/container-images/tcib/base/base.yaml
+++ b/container-images/tcib/base/base.yaml
@@ -1,5 +1,5 @@
 tcib_actions:
-- run: if [ -f "/etc/yum.repos.d/ubi.repo" ]; then dnf config-manager --set-disabled "ubi*" && dnf clean all && rm -rf /var/cache/dnf; fi
+- run: if [ -f "/etc/yum.repos.d/ubi.repo" ]; then rm -f /etc/yum.repos.d/ubi.repo && dnf clean all && rm -rf /var/cache/dnf; fi
 - run: >-
     dnf install -y crudini &&
     crudini --del /etc/dnf/dnf.conf main override_install_langs &&
