Remove redhat-release only if installed
It may happen we're running on Centos 8 and the package isn't present;
And we don't want it on Centos Stream 9 either, so let's just remove it
if present on CentOS based system.

Change-Id: Ia1bf4609209bb4ea792182603f4dfa2b6bb1f4ae

--- a/container-images/tcib/base/base.yaml
+++ b/container-images/tcib/base/base.yaml
@@ -51,7 +51,7 @@ tcib_actions:
     if [ '{{ tcib_distro }}' == 'centos' ];then dnf -y install dnf-plugins-core &&
     dnf download centos*release &&
     rpm -ivh --nodeps --replacepkgs --replacefiles *.rpm &&
-    if [ '{{ tcib_release }}' == '8' ];then rpm -e --nodeps redhat-release; fi &&
+    if [ -n "$(rpm -qa redhat-release)" ];then rpm -e --nodeps redhat-release; fi &&
     rm -rf *.rpm; fi
 - run: dnf update --excludepkgs redhat-release -y && dnf clean all && rm -rf /var/cache/dnf
 tcib_cmd: kolla_start
