Split off Ceph related container images
This commit updates the default tripleo_containers jinja template
splitting off the Ceph related container images.
With this new approach pulling the ceph containers is optional,
and can be avoided by setting the 'ceph_images' boolean to False.
To make this possible, a new jinja template processing approach
has been introduced, and a template basedir parameter (required
by the jinja loader) has been added to the BaseImageManager.

In particular:

- the 'template_dir' parameter represents the location path to the
  j2 templates that can be included in the main tripleo containers
  template; a default location (which matches with the default j2
  path) has been added, but if nothing is passed the old behavior
  is maintained;

- Two more 'ceph_' prefixed containers, required to deploy the Ceph
  Ingress daemon are added, and they are supposed to match with the
  tripleo-heat-templates 'OS::TripleO::Services::CephIngress' service.
  The Ingress daemon won’t be baked into the Ceph daemon container,
  hence `tripleo container image prepare` should be executed to pull
  the new container images/tags in the undercloud as made for the
  Ceph Dashboard and the regular Ceph image.

Change-Id: I7e337596b653cf635f07a36606e9f673044402a3

--- a/container-images/container_image_prepare_defaults.yaml
+++ b/container-images/container_image_prepare_defaults.yaml
@@ -26,22 +26,32 @@ parameter_defaults:
 
       # Container image name components for Ceph images.
       # Only used if Ceph is deployed.
+
+      # Pass ceph_images: false to avoid pulling the Ceph related images
       ceph_namespace: quay.io/ceph
       ceph_image: daemon
       ceph_tag: v6.0.6-stable-6.0-pacific-centos-8-x86_64
 
-      ceph_prometheus_namespace: quay.ceph.io/prometheus
+      ceph_prometheus_namespace: quay.io/prometheus
       ceph_prometheus_image: prometheus
-      ceph_prometheus_tag: v2.7.2
+      ceph_prometheus_tag: v2.18.1
 
-      ceph_alertmanager_namespace: quay.ceph.io/prometheus
+      ceph_alertmanager_namespace: quay.io/prometheus
       ceph_alertmanager_image: alertmanager
-      ceph_alertmanager_tag: v0.16.2
+      ceph_alertmanager_tag: v0.20.0
 
-      ceph_node_exporter_namespace: quay.ceph.io/prometheus
+      ceph_node_exporter_namespace: quay.io/prometheus
       ceph_node_exporter_image: node-exporter
-      ceph_node_exporter_tag: v0.17.0
+      ceph_node_exporter_tag: v0.18.1
 
-      ceph_grafana_namespace: quay.ceph.io/app-sre
-      ceph_grafana_image: grafana
+      ceph_grafana_namespace: quay.io/ceph
+      ceph_grafana_image: ceph-grafana
       ceph_grafana_tag: 6.7.4
+
+      ceph_haproxy_namespace: quay.io/ceph
+      ceph_haproxy_image: haproxy
+      ceph_haproxy_tag: 2.3
+
+      ceph_keepalived_namespace: quay.io/ceph
+      ceph_keepalived_image: keepalived
+      ceph_keepalived_tag: 2.1.5
