--- a/container-images/tripleo_containers.yaml
+++ b/container-images/tripleo_containers.yaml
@@ -167,14 +167,18 @@ container_images:
   image_source: tripleo
 - imagename: quay.io/ceph/daemon:v6.0.6-stable-6.0-pacific-centos-8-x86_64
   image_source: ceph
-- imagename: quay.ceph.io/prometheus/prometheus:v2.7.2
+- imagename: quay.io/prometheus/prometheus:v2.18.1
   image_source: prom
-- imagename: quay.ceph.io/prometheus/alertmanager:v0.16.2
+- imagename: quay.io/prometheus/alertmanager:v0.20.0
   image_source: prom
-- imagename: quay.ceph.io/prometheus/node-exporter:v0.17.0
+- imagename: quay.io/prometheus/node-exporter:v0.18.1
   image_source: prom
-- imagename: quay.ceph.io/app-sre/grafana:6.7.4
+- imagename: quay.io/ceph/ceph-grafana:6.7.4
   image_source: grafana
+- imagename: quay.io/ceph/keepalived:2.1.5
+  image_source: keepalived
+- imagename: quay.io/ceph/haproxy:2.3
+  image_source: haproxy
 - imagename: quay.io/tripleomaster/openstack-rsyslog:current-tripleo
   image_source: tripleo
 - imagename: quay.io/tripleomaster/openstack-unbound:current-tripleo
