Fix reference to undefined variables when heat-config times out
When an async task times out, it doesn't register its result and
the subsequent task which refers to the result can't look up details
like stderr output or return code.

This change defines the default values to fix reference to unefined
variables.

Closes-Bug: #1958471
Change-Id: I5049e88872bfe3aa8072804cb67e8f7178951d9d

--- a/tripleo_common/templates/deployments.yaml
+++ b/tripleo_common/templates/deployments.yaml
@@ -200,11 +200,11 @@
 - name: "Output for async deployment {{ item }}"
   debug:
     msg:
-      - stderr: "{{ deployment_async_result.stderr.split('\n') }}"
-      - status_code: "{{ deployment_async_result.rc }}"
+      - stderr: "{{ deployment_async_result.stderr_lines | default(['Timed out']) }}"
+      - status_code: "{{ deployment_async_result.rc | default(-1) }}"
   tags:
     - output
-  failed_when: deployment_async_result.rc != 0
+  failed_when: deployment_async_result.rc | default(-1) != 0
   when: not ansible_check_mode|bool
 
 - name: "Check-mode for Run deployment {{ item }} (changed status indicates deployment would run)"
