--- a/image-yaml/overcloud-images-ceph.yaml
+++ b/image-yaml/overcloud-images-ceph.yaml
@@ -9,7 +9,7 @@ disk_images:
       - overcloud-ceph-storage
       - puppet-modules
       - stable-interface-names
-      - grub2
+      - bootloader
       - element-manifest
       - dynamic-login
       - iptables
