--- a/container-images/tripleo_containers.yaml
+++ b/container-images/tripleo_containers.yaml
@@ -53,6 +53,8 @@ container_images:
   image_source: tripleo
 - imagename: quay.io/tripleomaster/openstack-frr:current-tripleo
   image_source: tripleo
+- imagename: quay.io/tripleomaster/openstack-ovn-bgp-agent:current-tripleo
+  image_source: tripleo
 - imagename: quay.io/tripleomaster/openstack-glance-api:current-tripleo
   image_source: tripleo
 - imagename: quay.io/tripleomaster/openstack-gnocchi-api:current-tripleo
