ovn-bgp-agent image support
This adds support for the ovn-bgp-agent container image.
ovn-bgp-agent can be found at https://opendev.org/x/ovn-bgp-agent.

Conflicts:
    container-images/tripleo_containers.yaml

(cherry picked from commit a65535edc7062edfba2f85ecf0736a27764c4983)
Change-Id: Ic656117becd9a059b56a4753a5c579c2ee703cc5

--- a/container-images/tripleo_containers.yaml
+++ b/container-images/tripleo_containers.yaml
@@ -53,6 +53,8 @@ container_images:
   image_source: tripleo
 - imagename: quay.io/tripleowallaby/openstack-frr:current-tripleo
   image_source: tripleo
+- imagename: quay.io/tripleowallaby/openstack-ovn-bgp-agent:current-tripleo
+  image_source: tripleo
 - imagename: quay.io/tripleowallaby/openstack-glance-api:current-tripleo
   image_source: tripleo
 - imagename: quay.io/tripleowallaby/openstack-gnocchi-api:current-tripleo
