--- a/zuul.d/layout.yaml
+++ b/zuul.d/layout.yaml
@@ -34,6 +34,14 @@
             dependencies: *deps_unit_lint
         - tripleo-buildimage-overcloud-hardened-full-centos-8:
             dependencies: *deps_unit_lint
+        - tripleo-ci-centos-9-content-provider:
+            dependencies: *deps_unit_lint
+        - tripleo-buildimage-overcloud-full-centos-9:
+            dependencies: *deps_unit_lint
+        - tripleo-buildimage-ironic-python-agent-centos-9:
+            dependencies: *deps_unit_lint
+        - tripleo-buildimage-overcloud-hardened-uefi-full-centos-9:
+            dependencies: *deps_unit_lint
 
 
     gate:
