Add element reset-bls-entries to overcloud images
This is an element which will run a script on first boot to rename
`/boot/loader/entries` filenames to match the new value of
`/etc/machine-id`. This is required for `grub2-mkconfig` calls to
incorporate existing values in the boot loader entry files.

Depends-On: https://review.opendev.org/c/openstack/tripleo-image-elements/+/837430
Closes: rhbz#2073855
Change-Id: I1726ab71fe1ff84bc35237a3a92d48090de7b0ad

--- a/image-yaml/overcloud-hardened-images-uefi-python3-rt-kernel.yaml
+++ b/image-yaml/overcloud-hardened-images-uefi-python3-rt-kernel.yaml
@@ -24,6 +24,7 @@ disk_images:
       - overcloud-secure
       - openssh
       - disable-nouveau
+      - reset-bls-entries
     packages:
       - kernel-rt
       - python3-psutil
