--- a/image-yaml/overcloud-images-ceph.yaml
+++ b/image-yaml/overcloud-images-ceph.yaml
@@ -19,6 +19,7 @@ disk_images:
       - remove-resolvconf
       - openssh
       - disable-nouveau
+      - reset-bls-entries
     packages:
       - python3-psutil
       - python3-debtcollector
