--- a/image-yaml/overcloud-realtime-compute-python3.yaml
+++ b/image-yaml/overcloud-realtime-compute-python3.yaml
@@ -20,6 +20,7 @@ disk_images:
       - realtime-kernel
       - openssh
       - disable-nouveau
+      - reset-bls-entries
     packages:
       - python3-psutil
       - python3-debtcollector
