--- a/image-yaml/overcloud-hardened-images-uefi-python3.yaml
+++ b/image-yaml/overcloud-hardened-images-uefi-python3.yaml
@@ -24,6 +24,7 @@ disk_images:
       - overcloud-secure
       - openssh
       - disable-nouveau
+      - reset-bls-entries
     packages:
       - python3-psutil
       - python3-debtcollector
