--- a/image-yaml/overcloud-hardened-images-uefi.yaml
+++ b/image-yaml/overcloud-hardened-images-uefi.yaml
@@ -24,6 +24,7 @@ disk_images:
       - overcloud-secure
       - openssh
       - disable-nouveau
+      - reset-bls-entries
     packages:
       - python-psutil
       - python-debtcollector
