--- a/container-images/tripleo_containers.yaml
+++ b/container-images/tripleo_containers.yaml
@@ -169,13 +169,13 @@ container_images:
   image_source: tripleo
 - imagename: quay.io/ceph/daemon:v6.0.7-stable-6.0-pacific-centos-stream8
   image_source: ceph
-- imagename: quay.ceph.io/prometheus/prometheus:v2.7.2
+- imagename: quay.io/prometheus/prometheus:v2.18.1
   image_source: prom
-- imagename: quay.ceph.io/prometheus/alertmanager:v0.16.2
+- imagename: quay.io/prometheus/alertmanager:v0.20.0
   image_source: prom
-- imagename: quay.ceph.io/prometheus/node-exporter:v0.17.0
+- imagename: quay.io/prometheus/node-exporter:v0.18.1
   image_source: prom
-- imagename: quay.ceph.io/app-sre/grafana:6.7.4
+- imagename: quay.io/ceph/ceph-grafana:6.7.4
   image_source: grafana
 - imagename: quay.io/tripleowallaby/openstack-rsyslog:current-tripleo
   image_source: tripleo
