--- a/zuul.d/layout.yaml
+++ b/zuul.d/layout.yaml
@@ -31,8 +31,20 @@
             dependencies: *deps_unit_lint
         - tripleo-buildimage-overcloud-hardened-full-centos-8:
             dependencies: *deps_unit_lint
+        - tripleo-ci-centos-8-content-provider-ussuri:
+            voting: false
+        - tripleo-ci-centos-8-standalone-upgrade-victoria:
+            voting: false
+        - tripleo-ci-centos-8-undercloud-upgrade-victoria:
+            voting: false
     gate:
       queue: tripleo
       jobs:
         - openstack-tox-linters
         - tripleo-cross-tripleoclient-py37
+        - tripleo-ci-centos-8-content-provider-ussuri:
+            voting: false
+        - tripleo-ci-centos-8-standalone-upgrade-victoria:
+            voting: false
+        - tripleo-ci-centos-8-undercloud-upgrade-victoria:
+            voting: false
