Update ceph daemon image pull registry
This patch updates the ceph image pull registry and tag to point
to 'current-ceph' tag on quay.rdoproject.org/daemon, in order to
always get the latest promoted ceph image.
The promotion process was recently merged [1] and runs
3 times a week, testing the newest stable ceph daemon tag.

[1] https://review.rdoproject.org/r/q/topic:ceph_promotion_pipeline

Change-Id: Ibec1310c5e1e9e37b1c54c1561b13e76c4102439
Signed-off-by: Douglas Viroel <dviroel@redhat.com>

--- a/container-images/container_image_prepare_defaults.yaml
+++ b/container-images/container_image_prepare_defaults.yaml
@@ -28,9 +28,9 @@ parameter_defaults:
       # Only used if Ceph is deployed.
 
       # Pass ceph_images: false to avoid pulling the Ceph related images
-      ceph_namespace: quay.io/ceph
+      ceph_namespace: quay.rdoproject.org/tripleomastercentos9
       ceph_image: daemon
-      ceph_tag: v6.0.7-stable-6.0-pacific-centos-stream8
+      ceph_tag: current-ceph
 
       ceph_prometheus_namespace: quay.io/prometheus
       ceph_prometheus_image: prometheus
