--- a/container-images/tripleo_containers.yaml
+++ b/container-images/tripleo_containers.yaml
@@ -165,7 +165,7 @@ container_images:
   image_source: tripleo
 - imagename: quay.io/tripleomastercentos9/openstack-swift-proxy-server:current-tripleo
   image_source: tripleo
-- imagename: quay.io/ceph/daemon:v6.0.7-stable-6.0-pacific-centos-stream8
+- imagename: quay.rdoproject.org/tripleomastercentos9/daemon:current-ceph
   image_source: ceph
 - imagename: quay.io/prometheus/prometheus:v2.33.4
   image_source: prom
