--- a/requirements.txt
+++ b/requirements.txt
@@ -18,3 +18,4 @@ cryptography>=3.4.7 # BSD/Apache-2.0
 tenacity>=6.1.0 # Apache-2.0
 metalsmith>=0.13.0 # Apache-2.0
 requests>=2.18.0,!=2.20.0  # Apache-2.0
+PyYAML>=3.12 # MIT
