--- a/container-images/container_image_prepare_defaults.yaml
+++ b/container-images/container_image_prepare_defaults.yaml
@@ -26,9 +26,9 @@ parameter_defaults:
 
       # Container image name components for Ceph images.
       # Only used if Ceph is deployed.
-      ceph_namespace: quay.io/ceph
+      ceph_namespace: quay.rdoproject.org/tripleowallabycentos9
       ceph_image: daemon
-      ceph_tag: v6.0.7-stable-6.0-pacific-centos-stream8
+      ceph_tag: current-ceph
 
       ceph_prometheus_namespace: quay.io/prometheus
       ceph_prometheus_image: prometheus
